[tool.poetry]
name = "template"
version = "0.1.0"
description = ""
authors = ["Matt Creel"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
rich = "^12.5.1"
typer = "^0.6.1"

[tool.poetry.dev-dependencies]
pylint = "^2.13"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
template = "template.__main__:app"
